Use Math.clamp() instead of min and max.